增加查询配置信息接口

--- a/zh_root/pom.xml
+++ b/zh_root/pom.xml
@@ -57,5 +57,6 @@
 		<module>zh_dao</module>
 		<module>zh_web</module>
 		<module>zh_model</module>
+		<module>zh_ali_service</module>
 	</modules>
 </project>
