--- a/zh_root/zh_ali_service/pom.xml
+++ b/zh_root/zh_ali_service/pom.xml
@@ -23,6 +23,12 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-eureka</artifactId>
 		</dependency>
+		<!-- 支付宝支付sdk -->
+		<dependency>
+			<groupId>com.alipay</groupId>
+			<artifactId>sdk-java</artifactId>
+			<version>20160911220059</version>
+		</dependency>
 		
   </dependencies>
 </project>
