--- a/zh_root/zh_model/pom.xml
+++ b/zh_root/zh_model/pom.xml
@@ -17,6 +17,10 @@
 	    <artifactId>persistence-api</artifactId>
 	    <version>1.0</version>
 	</dependency>
+	<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-feign</artifactId>
+		</dependency>
 	<!-- 引入jackson核心包 -->
 	 <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
