完善日志、异常处理

--- a/zh_root/zh_ali_service/pom.xml
+++ b/zh_root/zh_ali_service/pom.xml
@@ -23,6 +23,11 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-eureka</artifactId>
 		</dependency>
+		<!-- aop -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
 		<!-- 支付宝支付sdk -->
 		<dependency>
 			<groupId>com.alipay</groupId>
