--- a/zh_root/zh_service/src/main/resources/application.properties
+++ b/zh_root/zh_service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=zh-service
 server.port=5555
+client.ribbon.MaxAutoRetries=1
 eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
